@@ -1,3 +1,10 @@
+[b]Version 0.7.0[/b]:
+
+(2012-01-04)
+ * New option "Hide video window when playing audio files" in 
+   preferences -> interface.
+
+
 [b]Version 0.6.10[/b]:
 
 (2011-12-06)
